HOT-FIX: API UjianController - API Documentation Bearer Auth
