# storage/api-docs/api-docs.json
@@ -680,7 +680,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
             }
         },
         "/api/ujian/jawaban": {
